--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "body-parser": "^1.19.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "rxjs": "~6.5.2",
